--- a/app/src/main/res/drawable/ripple_effect_num.xml
+++ b/app/src/main/res/drawable/ripple_effect_num.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/ACCENT">
     <item>
-            <solid android:color="@color/ACCENT" />
+        <shape android:shape="rectangle">
+            <solid android:color="@color/Primary_color" />
+       </shape>
     </item>
 </ripple>
