--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:gravity="bottom|end"
-            android:text="10+10"
+            android:text="@string/_10_10"
             android:textColor="@color/Primary_Text"
             android:textSize="34sp" />
 
@@ -44,7 +44,7 @@
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:gravity="bottom|end"
-            android:text="20"
+            android:text="@string/_20"
             android:textColor="@color/Primary_Text"
             android:textSize="34sp" />
 
@@ -64,7 +64,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="4"
         android:orientation="horizontal"
-        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/linear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +82,7 @@
             android:paddingTop="1dp"
             android:paddingRight="8dp"
             android:paddingBottom="2dp"
-            android:text="log"
+            android:text="@string/log"
             android:textAllCaps="false"
             android:textSize="34sp"
             android:textStyle="bold" />
@@ -101,7 +100,7 @@
             android:paddingTop="1dp"
             android:paddingRight="8dp"
             android:paddingBottom="2dp"
-            android:text="ln"
+            android:text="@string/ln"
             android:textAllCaps="false"
             android:textSize="34sp"
             android:textStyle="bold" />
@@ -137,7 +136,7 @@
             android:paddingTop="1dp"
             android:paddingRight="8dp"
             android:paddingBottom="2dp"
-            android:text="("
+            android:text="@string/LBracket"
             android:textAllCaps="false"
             android:textSize="34sp"
             android:textStyle="bold" />
@@ -155,7 +154,7 @@
             android:paddingTop="1dp"
             android:paddingRight="8dp"
             android:paddingBottom="2dp"
-            android:text=")"
+            android:text="@string/RBracket"
             android:textAllCaps="false"
             android:textSize="34sp"
             android:textStyle="bold" />
@@ -172,7 +171,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/scifi1">
+        app:layout_constraintTop_toBottomOf="@id/scifi1"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/scifi2"
@@ -180,8 +180,25 @@
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:orientation="vertical"
-            android:visibility="gone"
             tools:ignore="NestedWeights">
+
+            <Button
+                android:id="@+id/pibtn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0.7dp"
+                android:layout_weight="1"
+                android:background="@drawable/ripple_effect_num"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
+                android:paddingLeft="8dp"
+                android:paddingTop="1dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="1dp"
+                android:text="@string/u03c0"
+                android:textAllCaps="false"
+                android:textSize="34sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/sinbtn"
@@ -196,7 +213,7 @@
                 android:paddingTop="1dp"
                 android:paddingRight="8dp"
                 android:paddingBottom="1dp"
-                android:text="sin"
+                android:text="@string/sin"
                 android:textAllCaps="false"
                 android:textSize="34sp"
                 android:textStyle="bold" />
@@ -214,7 +231,7 @@
                 android:paddingTop="1dp"
                 android:paddingRight="8dp"
                 android:paddingBottom="1dp"
-                android:text="cos"
+                android:text="@string/cos"
                 android:textAllCaps="false"
                 android:textSize="34sp"
                 android:textStyle="bold" />
@@ -232,13 +249,13 @@
                 android:paddingTop="1dp"
                 android:paddingRight="8dp"
                 android:paddingBottom="1dp"
-                android:text="tan"
+                android:text="@string/tan"
                 android:textAllCaps="false"
                 android:textSize="32sp"
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/pibtn"
+                android:id="@+id/DegOrRad"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="0.7dp"
@@ -250,27 +267,9 @@
                 android:paddingTop="1dp"
                 android:paddingRight="8dp"
                 android:paddingBottom="1dp"
-                android:text="\u03C0"
+                android:text="@string/DegOrRad"
                 android:textAllCaps="false"
-                android:textSize="34sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/normchn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="0.7dp"
-                android:layout_weight="1"
-                android:background="@drawable/ripple_effect_num"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
-                android:paddingLeft="8dp"
-                android:paddingTop="1dp"
-                android:paddingRight="8dp"
-                android:paddingBottom="1dp"
-                android:text="Nor"
-                android:textAllCaps="false"
-                android:textSize="34sp"
+                android:textSize="32sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -301,7 +300,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="AC"
+                    android:text="@string/ac"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -338,7 +337,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="%"
+                    android:text="@string/percent"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -356,7 +355,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="/"
+                    android:text="@string/divide"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -382,7 +381,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="7"
+                    android:text="@string/_7"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -400,7 +399,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="8"
+                    android:text="@string/_8"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -418,7 +417,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="9"
+                    android:text="@string/_9"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -436,7 +435,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="X"
+                    android:text="@string/x"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -462,7 +461,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="4"
+                    android:text="@string/_4"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -480,7 +479,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="5"
+                    android:text="@string/_5"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -498,7 +497,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="6"
+                    android:text="@string/_6"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -516,7 +515,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="-"
+                    android:text="@string/subraction"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -542,7 +541,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="1"
+                    android:text="@string/_1"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -560,7 +559,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="3"
+                    android:text="@string/_3"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -578,7 +577,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="2"
+                    android:text="@string/_2"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -596,7 +595,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="+"
+                    android:text="@string/Addition"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -622,7 +621,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="Sci"
+                    android:text="@string/e"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -640,7 +639,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="0"
+                    android:text="@string/_0"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -658,12 +657,12 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="."
+                    android:text="@string/decimal"
                     android:textAllCaps="false"
                     android:textSize="34sp"
                     android:textStyle="bold" />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/eqbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -676,8 +675,9 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="1dp"
-                    android:text="="
+                    android:text="@string/equal"
                     android:textAllCaps="false"
+                    android:textColor="@color/white"
                     android:textSize="34sp"
                     android:textStyle="bold"
                     app:rippleColor="@color/ACCENT" />
